Added content for services, added imnitial version of partners

--- a/styles/general.css
+++ b/styles/general.css
@@ -31,7 +31,7 @@
     font-family: "montserrat-medium", sans-serif;
     font-size: 5.2rem;
     line-height: 1.255;
-    color: #000000;
+    color: dimgray;
     margin-top: 0;
   }
   
