New components for section and itemList, including changes in css. Cleanup in javascript plugins and upgraded Micons to last available version. Corrected a typo in the matomo tracker code.

--- a/styles/Button.module.css
+++ b/styles/Button.module.css
@@ -81,8 +81,8 @@
  }
  
  .btn--stroke:hover, button.btn--stroke:hover {
-     border: 0.2rem solid #000000;
-     color: #000000;
+     border: 0.2rem solid #FFFFFF;
+     color: #FFFFFF;
  }
  
  .btn--pill, button.btn--pill {
