--- a/styles/general.css
+++ b/styles/general.css
@@ -105,6 +105,8 @@
   }
   
   
+/* TODO: REMOVE SECTION CLASSES FROM GENERIC FILES AFTER SECTION BECOMES A COMPONENT
+
   /* ------------------------------------------------------------------- 
   * ## section header
   * ------------------------------------------------------------------- */
