--- a/styles/globals.css
+++ b/styles/globals.css
@@ -3880,7 +3880,7 @@ footer .row {
  *
  * ------------------------------------------------------------------- */
  @import url("/font-awesome/css/font-awesome.min.css");
- @import url("/micons/micons.css");
+ @import url("/css/micons/micons.css");
  @import url("/fonts.css");
  
  
