Partners uitgebreid, menu aangepast en de onderwerpen afgemaakt. Niveau 'oplossing' ontbreekt nu nog.

--- a/styles/Header.module.css
+++ b/styles/Header.module.css
@@ -109,6 +109,14 @@
     list-style: none;
 }
 
+.header-nav__sublist {
+    font-family: "montserrat-regular", sans-serif;
+    font-size: 1.4rem;
+    
+    
+    list-style: none;
+}
+
 .header-nav__list li {
     padding-left: 0;
     line-height: 4.5rem;
