--- a/styles/Partners.module.css
+++ b/styles/Partners.module.css
@@ -3,7 +3,7 @@
 .partner-icon {
     -webkit-filter: grayscale(100%);
     filter: grayscale(100%);
-    height: 120px;
+    max-height: 120px;
 
 }
 
