--- a/styles/Footer.module.css
+++ b/styles/Footer.module.css
@@ -64,6 +64,10 @@
     transition: all 0.3s ease-in-out;
 }
 
+.footer-subscribe {
+    margin-top: 30px;
+}
+
 .footer-subscribe .subscribe-form {
     margin: 0;
     padding: 0;
